[package]
name = "learn_cursive"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
color-eyre = "0.6.4"
cursive = { version = "0.21.1", features = ["toml"] }
mosquitto-rs = "0.11.2"
rusqlite = "0.35.0"
tokio = { version = "1.45.1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
async-channel = { version = "2.3.1" }
