[package]
name = "mqttui"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
cursive = { version = "0.21.1", features = ["toml"] }
mosquitto-rs = "0.11.2"
rusqlite = "0.35.0"
async-channel = { version = "2.3.1" }
tokio = { version = "1.45.1", features = ["macros", "rt", "sync"] }
anyhow = "1.0.98"
reqwest = { version = "0.12.19", features = ["blocking"] }
systemdzbus = "0.1.3"
